--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,7 +48,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
             </init-param>  
             <init-param>  
                  <param-name>contextConfigLocation</param-name>  
-                 <param-value></param-value>  
+                 <param-value>/WEB-INF/springws-config.xml</param-value>  
             </init-param>  
             <load-on-startup>1</load-on-startup>  
        </servlet>  
