--- a/pom.xml
+++ b/pom.xml
@@ -40,37 +40,37 @@
 	<build>
 		<plugins>
 		
-			<!-- 
-				This plugin helps to generate class files for request response objects and 
-				their respective data 
-			-->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jaxb2-maven-plugin</artifactId>
-				<version>1.4</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>xjc</goal>
-						</goals>
-						<phase>generate-sources</phase>
-					</execution>
-				</executions>
-				<configuration>
-					<clearOutputDir>false</clearOutputDir>
-					<outputDirectory>src/main/java</outputDirectory>
-					<schemaDirectory>src/main/webapp/schema</schemaDirectory>
-					<includeSchema>**/*.xsd</includeSchema>
-					<bindingDirectory>src/main/resources/bindings</bindingDirectory>
-					<enableIntrospection>false</enableIntrospection>
-				</configuration>
-			</plugin>
-			
 			<plugin>
 			  <groupId>org.eclipse.jetty</groupId>
 			  <artifactId>jetty-maven-plugin</artifactId>
 			  <version>9.2.3.v20140905</version>
+			  <configuration>
+			    <webApp>
+			      <contextPath>/${project.artifactId}</contextPath>
+			    </webApp>
+			  </configuration>
 			</plugin>
+			
+			<!-- <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxws-maven-plugin</artifactId>
+                <version>1.10</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>wsimport</goal>
+                        </goals>
+                        <configuration>
+                            <wsdlUrls>
+                                <wsdlUrl>${basedir}/src/main/webapp/wsdl/loginmanager.wsdl</wsdlUrl>
+                            </wsdlUrls>
+                            <packageName>com.akash.ws.service.schema</packageName>
+                            <sourceDestDir>${basedir}/src/main/java</sourceDestDir>
+                            <destDir>${basedir}/target/jaxws</destDir>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin> -->
 			
 		</plugins>
 	</build>
